<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            app:title="@string/users"
            android:textAlignment="center"
            android:id="@+id/toolbar"
            app:titleTextColor="#FFFFFF"
            android:layout_height="?attr/actionBarSize"/>
    <EditText
            android:id="@+id/textview2"
            android:hint="@string/name"
            android:layout_marginTop="82dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_alignParentTop="true"/>
    <Button
            android:id="@+id/text1"
            android:layout_width="80dp"
            android:text="@string/add"
            android:layout_height="50dp" android:layout_marginEnd="31dp" android:layout_alignEnd="@+id/toolbar"
            android:layout_marginTop="82dp" android:layout_alignParentTop="true"/>

</RelativeLayout>