<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        tools:ignore="HardcodedText"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            app:title="@string/task"
            android:textAlignment="center"
            android:id="@+id/toolbar"
            app:titleTextColor="#FFFFFF"
            android:layout_height="?attr/actionBarSize"/>

    <EditText
            android:id="@+id/tvTask"
            android:hint="@string/title"
            android:layout_marginTop="82dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_alignParentTop="true"/>
    <Button
            android:id="@+id/buttonadd"
            android:layout_width="80dp"
            android:text="ADD"
            android:layout_height="50dp" android:layout_marginEnd="31dp" android:layout_alignEnd="@+id/toolbar"
            android:layout_marginTop="82dp" android:layout_alignParentTop="true"/>


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerview1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="4dp">
            <TextView
                    android:id="@+id/textview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btap1"
                    android:textSize="20dp"/>

            <ImageView
                    android:layout_marginLeft="300dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_delete_pink"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>