<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">
        <android.support.v7.widget.Toolbar
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                app:title="@string/app_name"
                android:textAlignment="center"
                android:id="@+id/toolbar"
                app:titleTextColor="#FFFFFF"
                android:layout_height="wrap_content"/>
        <ImageView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="250dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_delete"/>
    </LinearLayout>

    <TextView
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="20sp"
            android:textColor="#090808"
            android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="20sp"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Completed"
                android:textSize="20sp"
                android:textColor="#090808"
                android:textStyle="bold"/>
        <CheckBox
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/textview1"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Assigned to:"
                android:textSize="20sp"
                android:textColor="#090808"
                android:textStyle="bold"/>
        <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unassigned"
                android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_below="@id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Spinner
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:layout_marginLeft="200dp"
                android:inputType="text"
                android:layout_weight="20"
                android:maxLength="5"
                android:id="@+id/spiner"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#090808"
        />



    </LinearLayout>



</LinearLayout>